# NKFADC500_mini_CLI

./: CMakeLists.txt  README.md  offline_anal_500.cpp  offline_anal_edu.cpp  offline_compton_edge.cpp  offline_spe.cpp  setup.sh  view_waveform_pro.C  visualize_waveforms.cpp
app/: CMakeLists.txt  frontend_main.cpp  online_monitor.cpp  production_main.cpp
config/: settings.cfg
core/: CMakeLists.txt
core/include/: BinaryDaqManager.hh  Fadc500Device.hh  RawBufferPool.hh
core/src/: BinaryDaqManager.cpp  Fadc500Device.cpp
gui/: CMakeLists.txt  main.py
gui/core/: DatabaseManager.py  ProcessManager.py  ZmqWorker.py
gui/widgets/: ConfigTab.py  DaqTab.py  DatabaseTab.py  HvTab.py  OnlineMonitorTab.py  ProductionTab.py  TltTab.py  path_controller.py
gui/windows/: MainWindow.py
include/: DaqSystem.h  Processor.h
notice_nkfadc500_4/: how_to_install.txt  how_to_run.txt  how_to_update.txt
notice_nkfadc500_4/notice/: notice_env.sh
notice_nkfadc500_4/notice/src/nkfadc500/nkfadc500root/: Makefile  NoticeNKFADC500ROOTDict.cc  NoticeNKFADC500ROOTDict.h
notice_nkfadc500_4/notice/src/nkusb/nkusb/: nkusb.c
notice_nkfadc500_4/notice/src/nkusb/nkusbroot/: Makefile
notice_nkfadc500_4/notice/src/usb3com/usb3comroot/: Makefile
notice_nkfadc500_4/notice/test/mini_nkfadc500/: nkfadc500_4_test.C
objects/: CMakeLists.txt
objects/include/: FadcBD.hh  LinkDef.h  RawChannel.hh  RawData.hh  RunInfo.hh
objects/src/: FadcBD.cc  RawChannel.cc  RawData.cc  RunInfo.cc
rules/: 50-nkfadc500.rules  setup_usb.sh
src/: BinaryDaqManager.cpp  BinaryDaqManager.hh  CMakeLists.txt  ConfigParser.cpp  ConfigParser.hh  DaqSystem.cpp  ELog.cpp  ELog.hh  Fadc500Device.cpp  Fadc500Device.hh  Processor.cpp  RawBufferPool.hh  frontend_main.cpp  production_main.cpp  visualize_waveforms.cpp
